--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -70,6 +70,17 @@ http {
 
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/*;
+		
+	server {
+		listen *;
+		server_name *;
+		location ^~ /uploads/ {
+			root /home/box/web;
+		}
+		location  ~* \.\w+$ {
+			allias /home/box/web/public/;
+		}
+	}
 }
 
 
