--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -72,10 +72,9 @@ http {
 	include /etc/nginx/sites-enabled/*;
 		
 	server {
-		listen *;
-		server_name *;
+		listen 80 default;
 		location ^~ /uploads/ {
-			root /home/box/web;
+			root /home/box/web/;
 		}
 		location  ~* \.\w+$ {
 			allias /home/box/web/public/;
